[gd_scene load_steps=12 format=2]

[ext_resource path="res://Game Play/Normal Level/NormalLevelQn2.gd" type="Script" id=1]
[ext_resource path="res://sprites/tower/internal tower tiles bg.png" type="Texture" id=2]
[ext_resource path="res://sprites/buttons or icons/rectangular button.png" type="Texture" id=3]
[ext_resource path="res://sprites/buttons or icons/rectangular popup.png" type="Texture" id=4]
[ext_resource path="res://sprites/buttons or icons/x button.png" type="Texture" id=5]
[ext_resource path="res://sprites/buttons or icons/back button.png" type="Texture" id=6]
[ext_resource path="res://Game Play/Normal Level/TowerDoorOpen.tscn" type="PackedScene" id=7]
[ext_resource path="res://Player/King.tscn" type="PackedScene" id=8]
[ext_resource path="res://Game Play/Normal Level/TowerBricks.tscn" type="PackedScene" id=9]
[ext_resource path="res://Game Play/Normal Level/NormalLvlDoorClosed.tscn" type="PackedScene" id=10]
[ext_resource path="res://sprites/tower/star.png" type="Texture" id=11]

[node name="NormalLevelQn2" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="TowerBackground" type="TextureRect" parent="."]
margin_right = 1916.0
margin_bottom = 1078.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TowerBricks3" parent="TowerBackground" instance=ExtResource( 9 )]
position = Vector2( 736.877, 1030.94 )

[node name="TowerBricks4" parent="TowerBackground" instance=ExtResource( 9 )]
position = Vector2( 1034.18, 1030.94 )

[node name="TowerBricks5" parent="TowerBackground" instance=ExtResource( 9 )]
position = Vector2( 1612.13, 1030.94 )

[node name="TowerBricks6" parent="TowerBackground" instance=ExtResource( 9 )]
position = Vector2( 1902.3, 1028.56 )

[node name="TowerBricks7" parent="TowerBackground" instance=ExtResource( 9 )]
position = Vector2( 1321.97, 1033.31 )

[node name="TowerBricks2" parent="TowerBackground" instance=ExtResource( 9 )]
position = Vector2( 439.575, 1028.56 )

[node name="TowerBricks" parent="TowerBackground" instance=ExtResource( 9 )]
position = Vector2( 149.408, 1030.94 )

[node name="TowerBricks8" parent="TowerBackground" instance=ExtResource( 9 )]
position = Vector2( 80.4344, 957.204 )

[node name="TowerBricks9" parent="TowerBackground" instance=ExtResource( 9 )]
position = Vector2( 375.358, 954.826 )

[node name="TowerBricks10" parent="TowerBackground" instance=ExtResource( 9 )]
position = Vector2( 660.767, 954.826 )

[node name="TowerBricks11" parent="TowerBackground" instance=ExtResource( 9 )]
position = Vector2( 955.691, 954.826 )

[node name="TowerBricks12" parent="TowerBackground" instance=ExtResource( 9 )]
position = Vector2( 1248.24, 957.204 )

[node name="TowerBricks13" parent="TowerBackground" instance=ExtResource( 9 )]
position = Vector2( 1545.54, 954.826 )

[node name="TowerBricks14" parent="TowerBackground" instance=ExtResource( 9 )]
position = Vector2( 1838.09, 954.826 )

[node name="King" parent="." instance=ExtResource( 8 )]
position = Vector2( 35.6762, 839.58 )

[node name="Qn2" type="TextureRect" parent="."]
margin_left = 247.0
margin_top = 50.0
margin_right = 1682.0
margin_bottom = 237.0
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Correct" type="TextureButton" parent="Qn2"]
margin_left = 809.086
margin_top = 267.631
margin_right = 973.086
margin_bottom = 354.631
texture_normal = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Wrong1" type="TextureButton" parent="Qn2"]
margin_left = 174.879
margin_top = 284.183
margin_right = 253.879
margin_bottom = 356.183
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Wrong2" type="TextureButton" parent="Qn2"]
margin_left = 525.429
margin_top = 280.675
margin_right = 604.429
margin_bottom = 352.675
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Wrong3" type="TextureButton" parent="Qn2"]
margin_left = 1171.06
margin_top = 285.255
margin_right = 1250.06
margin_bottom = 357.255
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnsCorrectMsg" type="TextureButton" parent="Qn2"]
margin_left = 477.775
margin_top = 419.0
margin_right = 944.775
margin_bottom = 558.0
texture_normal = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnsWrongMsg" type="TextureButton" parent="Qn2"]
margin_left = 477.775
margin_top = 419.0
margin_right = 944.775
margin_bottom = 558.0
texture_normal = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextButton" type="TextureButton" parent="Qn2"]
margin_left = 877.531
margin_top = 682.591
margin_right = 968.531
margin_bottom = 755.591
rect_rotation = -180.0
texture_normal = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnsButton" type="TextureButton" parent="Qn2"]
margin_left = 569.696
margin_top = 602.652
margin_right = 653.696
margin_bottom = 687.652
texture_normal = ExtResource( 11 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NormalLvlDoorClosed" parent="." instance=ExtResource( 10 )]
position = Vector2( 1726.86, 837.163 )

[node name="NormalLvlDoorOpen" parent="." instance=ExtResource( 7 )]
position = Vector2( 1730.84, 824.846 )

[connection signal="pressed" from="Qn2/Correct" to="." method="_on_Correct_pressed"]
[connection signal="pressed" from="Qn2/Wrong1" to="." method="_on_Wrong_pressed"]
[connection signal="pressed" from="Qn2/Wrong2" to="." method="_on_Wrong_pressed"]
[connection signal="pressed" from="Qn2/Wrong3" to="." method="_on_Wrong_pressed"]
[connection signal="pressed" from="Qn2/NextButton" to="." method="_on_NextButton_pressed"]
